--- a/templates/chiusura_servizio/show.html.twig
+++ b/templates/chiusura_servizio/show.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <h1>Chiusura Servizio</h1>
 
-    <table class="table">
+<div id="no-more-tables">
+    <table class="col-sm-12  table-striped table-condensed cf">
+        <thead class="cf">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -25,6 +27,7 @@
             </tr>
         </tbody>
     </table>
+</div>
 
     <a class="btn btn-warning" href="{{ path('app_chiusura_servizio_index') }}">Torna alla lista</a>
 
