--- a/templates/lesioni/index.html.twig
+++ b/templates/lesioni/index.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <h1>Lesioni</h1>
 
-    <table class="table">
+<div id="no-more-tables">
+    <table class="col-sm-12  table-striped table-condensed cf">
+        <thead class="cf">
         <thead>
             <tr>
                 <th>Id</th>
@@ -24,17 +26,17 @@
         <tbody>
         {% for lesioni in lesionis %}
             <tr>
-                <td>{{ lesioni.id }}</td>
-                <td>{{ lesioni.nome }}</td>
-                <td>{{ lesioni.dataRivalutazioniSettimanali ? lesioni.dataRivalutazioniSettimanali|date('Y-m-d') : '' }}</td>
-                <td>{{ lesioni.tipologiaLesione }}</td>
-                <td>{{ lesioni.numeroSedeLesione }}</td>
-                <td>{{ lesioni.gradoLesione }}</td>
-                <td>{{ lesioni.condizioneLesione }}</td>
-                <td>{{ lesioni.bordiLesione }}</td>
-                <td>{{ lesioni.cutePerilesionale }}</td>
-                <td>{{ lesioni.noteSullaLesione }}</td>
-                <td>
+                <td data-title='Id'>{{ lesioni.id }}</td>
+                <td data-title='Nome'>{{ lesioni.nome }}</td>
+                <td data-title='Data Rivalutazioni Settimanali'>{{ lesioni.dataRivalutazioniSettimanali ? lesioni.dataRivalutazioniSettimanali|date('Y-m-d') : '' }}</td>
+                <td data-title='Tipologia Lesione'>{{ lesioni.tipologiaLesione }}</td>
+                <td data-title='Numero Sede Lesione'>{{ lesioni.numeroSedeLesione }}</td>
+                <td data-title='Grado Lesione'>{{ lesioni.gradoLesione }}</td>
+                <td data-title='Condizione Lesione'>{{ lesioni.condizioneLesione }}</td>
+                <td data-title='Bordi Lesione'>{{ lesioni.bordiLesione }}</td>
+                <td data-title='Cute Perilesionale'>{{ lesioni.cutePerilesionale }}</td>
+                <td data-title='Note sulla lesione'>{{ lesioni.noteSullaLesione ? lesioni.noteSullaLesione :'Nessuna'}}</td>
+                <td data-title='Operazioni'>
                     <div class="btn-group" role="group">
                         <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         Apri
@@ -51,6 +53,7 @@
         {% endfor %}
         </tbody>
     </table>
+</div>
 
     
     <a class="btn btn-warning" href="{{ path('app_homepage') }}">Menù Principale</a>
