--- a/templates/scheda_pai/show.html.twig
+++ b/templates/scheda_pai/show.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <h1>Scheda PAI</h1>
 
-    <table class="table">
+<div id="no-more-tables">
+    <table class="col-sm-12  table-striped table-condensed cf">
+        <thead class="cf">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -49,6 +51,7 @@
             </tr>
         </tbody>
     </table>
+</div>
 
     <a class="btn btn-warning" href="{{ path('app_scheda_pai_index') }}">Torna alla lista</a>
 
