--- a/templates/spmsq/index.html.twig
+++ b/templates/spmsq/index.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <h1>Valutazione Cognitiva:SPMSQ </h1>
 
-    <table class="table">
+<div id="no-more-tables">
+    <table class="col-sm-12  table-striped table-condensed cf">
+        <thead class="cf">
         <thead>
             <tr>
                 <th>Id</th>
@@ -19,7 +21,7 @@
                 <th>Quando è nato?</th>
                 <th>Chi è il Presidente della Repubblica?</th>
                 <th>Chi era il Presidente precedente?</th>
-                <th>Qual è il cognome da ragazza si sua madre?</th>
+                <th>Qual è il cognome da ragazza di sua madre?</th>
                 <th>Sottragga da 20 tre e poi ancora fino in fondo</th>
                 <th>Totale</th>
                 <th>Operazioni</th>
@@ -28,21 +30,21 @@
         <tbody>
         {% for s_p_m_s_q in s_p_m_s_qs %}
             <tr>
-                <td>{{ s_p_m_s_q.id }}</td>
-                <td>{{ s_p_m_s_q.nome }}</td>
-                <td>{{ s_p_m_s_q.dataValutazione ? s_p_m_s_q.dataValutazione|date('Y-m-d') : '' }}</td>
-                <td>{{ s_p_m_s_q.giornoOggi ? 'Si' : 'No' }}</td>
-                <td>{{ s_p_m_s_q.giornoSettimana ? 'Si' : 'No' }}</td>
-                <td>{{ s_p_m_s_q.posto ? 'Si' : 'No' }}</td>
-                <td>{{ s_p_m_s_q.indirizzo ? 'Si' : 'No' }}</td>
-                <td>{{ s_p_m_s_q.anni ? 'Si' : 'No' }}</td>
-                <td>{{ s_p_m_s_q.dataNascita ? 'Si' : 'No' }}</td>
-                <td>{{ s_p_m_s_q.presidenteAttuale ? 'Si' : 'No' }}</td>
-                <td>{{ s_p_m_s_q.presidentePrecedente ? 'Si' : 'No' }}</td>
-                <td>{{ s_p_m_s_q.cognomeMadre ? 'Si' : 'No' }}</td>
-                <td>{{ s_p_m_s_q.sottrazione ? 'Si' : 'No' }}</td>
-                <td>{{ s_p_m_s_q.totale }}</td>
-                <td>
+                <td data-title='Id'>{{ s_p_m_s_q.id }}</td>
+                <td data-title='Nome'>{{ s_p_m_s_q.nome }}</td>
+                <td data-title='Data di valutazione'>{{ s_p_m_s_q.dataValutazione ? s_p_m_s_q.dataValutazione|date('Y-m-d') : '' }}</td>
+                <td data-title='Che giorno è oggi?'>{{ s_p_m_s_q.giornoOggi ? 'Si' : 'No' }}</td>
+                <td data-title='Che giorno della settimana è?'>{{ s_p_m_s_q.giornoSettimana ? 'Si' : 'No' }}</td>
+                <td data-title='Come si chiama questo posto?'>{{ s_p_m_s_q.posto ? 'Si' : 'No' }}</td>
+                <td data-title='Quel è il suo indirizzo?'>{{ s_p_m_s_q.indirizzo ? 'Si' : 'No' }}</td>
+                <td data-title='Quanti anni ha?'>{{ s_p_m_s_q.anni ? 'Si' : 'No' }}</td>
+                <td data-title='Quando è nato?'>{{ s_p_m_s_q.dataNascita ? 'Si' : 'No' }}</td>
+                <td data-title='Chi è il Presidente della Repubblica?'>{{ s_p_m_s_q.presidenteAttuale ? 'Si' : 'No' }}</td>
+                <td data-title='Chi era il Presidente precedente?'>{{ s_p_m_s_q.presidentePrecedente ? 'Si' : 'No' }}</td>
+                <td data-title='Quel è il cognome da ragazza di sua madre?'>{{ s_p_m_s_q.cognomeMadre ? 'Si' : 'No' }}</td>
+                <td data-title='Sottragga da 20 3 e poi ancora fino in fondo'>{{ s_p_m_s_q.sottrazione ? 'Si' : 'No' }}</td>
+                <td data-title='Totale'>{{ s_p_m_s_q.totale }}</td>
+                <td data-title='Operazioni'>
                     <div class="btn-group" role="group">
                         <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         Apri
@@ -59,6 +61,7 @@
         {% endfor %}
         </tbody>
     </table>
+</div>
 
     
     <a class="btn btn-warning" href="{{ path('app_homepage') }}">Menù Principale</a>
