--- a/templates/spmsq/show.html.twig
+++ b/templates/spmsq/show.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <h1>SPMSQ</h1>
 
-    <table class="table">
+<div id="no-more-tables">
+    <table class="col-sm-12  table-striped table-condensed cf">
+        <thead class="cf">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -65,6 +67,7 @@
             </tr>
         </tbody>
     </table>
+</div>
     <div class="alert alert-info" role="alert">
     <div class="row">
     Esito della valutazione
@@ -81,7 +84,8 @@
     <div class="row">
     - 8-10 errori: deterioramento grave
     </div>
-</div>
+    </div>
+
 
     <a class="btn btn-warning" href="{{ path('app_s_p_m_s_q_index') }}">Torna alla lista</a>
 
