--- a/templates/valutazione_generale/show.html.twig
+++ b/templates/valutazione_generale/show.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <h1>Valutazione Generale</h1>
 
-    <table class="table">
+<div id="no-more-tables">
+    <table class="col-sm-12  table-striped table-condensed cf">
+        <thead class="cf">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -103,8 +105,10 @@
                 </ul>
                 </td>
             </tr>
+            </thead>
         </tbody>
     </table>
+</div>
 
     <a class="btn btn-warning" href="{{ path('app_valutazione_generale_index') }}">Torna alla lista</a>
 
