--- a/templates/vas/show.html.twig
+++ b/templates/vas/show.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <h1>Vas</h1>
 
-    <table class="table">
+<div id="no-more-tables">
+    <table class="col-sm-12  table-striped table-condensed cf">
+        <thead class="cf">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -47,8 +49,10 @@
                 <th>Altro</th>
                 <td>{{ va.altro ? 'Si' : 'No' }}</td>
             </tr>
+            </thead>
         </tbody>
     </table>
+</div>
 
     <a class="btn btn-warning" href="{{ path('app_vas_index') }}">Torna alla lista</a>
 
