--- a/templates/chiusura_servizio/edit.html.twig
+++ b/templates/chiusura_servizio/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('chiusura_servizio/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a class="btn btn-warning" href="{{ path('app_chiusura_servizio_index') }}">Annulla</a>
+    <a class="btn btn-danger" href="{{ path('app_chiusura_servizio_index') }}">Annulla</a>
 
     {{ include('chiusura_servizio/_delete_form.html.twig') }}
 {% endblock %}
