--- a/templates/chiusura_servizio/index.html.twig
+++ b/templates/chiusura_servizio/index.html.twig
@@ -44,7 +44,7 @@
 </div>
 
     
-    <a class="btn btn-warning" href="{{ path('app_homepage') }}">Menù Principale</a>
+    <a class="btn btn-primary" href="{{ path('app_homepage') }}">Menù Principale</a>
 
 <nav aria-label="Page navigation example">
    <ul class="pagination justify-content-center">
