--- a/templates/chiusura_servizio/show.html.twig
+++ b/templates/chiusura_servizio/show.html.twig
@@ -29,7 +29,7 @@
     </table>
 </div>
 
-    <a class="btn btn-warning" href="{{ path('app_chiusura_servizio_index') }}">Torna alla lista</a>
+    <a class="btn btn-primary" href="{{ path('app_chiusura_servizio_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_chiusura_servizio_edit', {'id': chiusura_servizio.id}) }}">Modifica</a>
 
