--- a/templates/lesioni/edit.html.twig
+++ b/templates/lesioni/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('lesioni/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a class="btn btn-warning" href="{{ path('app_lesioni_index') }}">Annulla</a>
+    <a class="btn btn-danger" href="{{ path('app_lesioni_index') }}">Annulla</a>
 
     {{ include('lesioni/_delete_form.html.twig') }}
 {% endblock %}
