--- a/templates/scheda_pai/edit.html.twig
+++ b/templates/scheda_pai/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('scheda_pai/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a class="btn btn-warning" href="{{ path('app_scheda_pai_index') }}">Annulla</a>
+    <a class="btn btn-danger" href="{{ path('app_scheda_pai_index') }}">Annulla</a>
 
     {{ include('scheda_pai/_delete_form.html.twig') }}
 {% endblock %}
