--- a/templates/spmsq/edit.html.twig
+++ b/templates/spmsq/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('spmsq/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a class="btn btn-warning" href="{{ path('app_s_p_m_s_q_index') }}">Annulla</a>
+    <a class="btn btn-danger" href="{{ path('app_s_p_m_s_q_index') }}">Annulla</a>
 
     {{ include('spmsq/_delete_form.html.twig') }}
 {% endblock %}
