--- a/templates/tinetti/_form.html.twig
+++ b/templates/tinetti/_form.html.twig
@@ -478,7 +478,7 @@
             {{ form_row(form.totale) }}
         </div>
 </div>
-    <button class="btn">{{ button_label|default('Salva') }}</button>
+    <button class="btn btn-primary">{{ button_label|default('Salva') }}</button>
 {{ form_end(form) }}
 
 
