--- a/templates/vas/edit.html.twig
+++ b/templates/vas/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('vas/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a class="btn btn-warning" href="{{ path('app_vas_index') }}">Annulla</a>
+    <a class="btn btn-danger" href="{{ path('app_vas_index') }}">Annulla</a>
 
     {{ include('vas/_delete_form.html.twig') }}
 {% endblock %}
