--- a/templates/vas/show.html.twig
+++ b/templates/vas/show.html.twig
@@ -54,7 +54,7 @@
     </table>
 </div>
 
-    <a class="btn btn-warning" href="{{ path('app_vas_index') }}">Torna alla lista</a>
+    <a class="btn btn-primary" href="{{ path('app_vas_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_vas_edit', {'id': va.id}) }}">Modifica</a>
 
