--- a/templates/braden/edit.html.twig
+++ b/templates/braden/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('braden/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a class="btn btn-warning" href="{{ path('app_form_pai_braden_index') }}">Annulla</a>
+    <a class="btn btn-danger" href="{{ path('app_form_pai_braden_index') }}">Annulla</a>
 
     {{ include('braden/_delete_form.html.twig') }}
 {% endblock %}
