--- a/templates/braden/show.html.twig
+++ b/templates/braden/show.html.twig
@@ -53,7 +53,7 @@
     </table>
 </div>
 
-    <a class="btn btn-warning" href="{{ path('app_form_pai_braden_index') }}">Torna alla lista</a>
+    <a class="btn btn-primary" href="{{ path('app_form_pai_braden_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_form_pai_braden_edit', {'id': braden.id}) }}">Modifica</a>
 
