--- a/templates/lesioni/_form.html.twig
+++ b/templates/lesioni/_form.html.twig
@@ -49,5 +49,5 @@
         </div>
 </div>
 
-    <button class="btn">{{ button_label|default('Salva') }}</button>
+    <button class="btn btn-primary">{{ button_label|default('Salva') }}</button>
 {{ form_end(form) }}
