--- a/templates/lesioni/show.html.twig
+++ b/templates/lesioni/show.html.twig
@@ -53,7 +53,7 @@
     </table>
 </div>
 
-    <a class="btn btn-warning" href="{{ path('app_lesioni_index') }}">Torna alla lista</a>
+    <a class="btn btn-primary" href="{{ path('app_lesioni_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_lesioni_edit', {'id': lesioni.id}) }}">Modifica</a>
 
