--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -18,6 +18,6 @@
         {# If you want to control the URL the user is redirected to on success
         <input type="hidden" name="_target_path" value="/account"/> #}
 
-        <button type="submit">login</button>
+        <button class="btn btn-primary" type="submit">login</button>
     </form>
 {% endblock %}
