--- a/templates/parere_mmg/show.html.twig
+++ b/templates/parere_mmg/show.html.twig
@@ -29,7 +29,7 @@
     </table>
 </div>
 
-    <a class="btn btn-warning" href="{{ path('app_parere_mmg_index') }}">Torna alla lista</a>
+    <a class="btn btn-primary" href="{{ path('app_parere_mmg_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_parere_mmg_edit', {'id': parere_mmg.id}) }}">Modifica</a>
 
