--- a/templates/scheda_pai/show.html.twig
+++ b/templates/scheda_pai/show.html.twig
@@ -14,31 +14,31 @@
                 <td>{{ scheda_pai.id }}</td>
             </tr>
             <tr>
-                <th>Id Operatore Principale</th>
+                <th>Operatore Principale</th>
                 <td>{{ scheda_pai.idOperatorePrincipale }}</td>
             </tr>
             <tr> 
-                <th>Id Operatore Secondario Inf</th>
+                <th>Operatore Secondario Inf</th>
                 <td>{{ scheda_pai.idOperatoreSecondarioInf ? scheda_pai.idOperatoreSecondarioInf|join(', ') : '' }}</td>
             </tr>
             <tr>
-                <th>Id Operatore Secondario Tdr</th>
+                <th>Operatore Secondario Tdr</th>
                 <td>{{ scheda_pai.idOperatoreSecondarioTdr ? scheda_pai.idOperatoreSecondarioTdr|join(', ') : '' }}</td>
             </tr>
             <tr>
-                <th>Id Operatore Secondario Log</th>
+                <th>Operatore Secondario Log</th>
                 <td>{{ scheda_pai.idOperatoreSecondarioLog ? scheda_pai.idOperatoreSecondarioLog|join(', ') : '' }}</td>
             </tr>
             <tr>
-                <th>Id Operatore Secondario Asa</th>
+                <th>Operatore Secondario Asa</th>
                 <td>{{ scheda_pai.idOperatoreSecondarioAsa ? scheda_pai.idOperatoreSecondarioAsa|join(', ') : '' }}</td>
             </tr>
             <tr>
-                <th>Id Operatore Secondario Oss</th>
+                <th>Operatore Secondario Oss</th>
                 <td>{{ scheda_pai.idOperatoreSecondarioOss ? scheda_pai.idOperatoreSecondarioOss|join(', ') : '' }}</td>
             </tr>
             <tr>
-                <th>Id Assistito</th>
+                <th>Assistito</th>
                 <td>{{ scheda_pai.idAssistito }}</td>
             </tr>
             <tr>
@@ -53,7 +53,7 @@
     </table>
 </div>
 
-    <a class="btn btn-warning" href="{{ path('app_scheda_pai_index') }}">Torna alla lista</a>
+    <a class="btn btn-primary" href="{{ path('app_scheda_pai_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_scheda_pai_edit', {'id': scheda_pai.id}) }}">Modifica</a>
 
