--- a/templates/spmsq/_form.html.twig
+++ b/templates/spmsq/_form.html.twig
@@ -91,5 +91,5 @@
     E' consentito un errore in meno se il soggetto ha un livello di istruzione superiore
     </div>
 </div>
-    <button class="btn">{{ button_label|default('Salva') }}</button>
+    <button class="btn btn-primary">{{ button_label|default('Salva') }}</button>
 {{ form_end(form) }}
