--- a/templates/tinetti/show.html.twig
+++ b/templates/tinetti/show.html.twig
@@ -117,7 +117,7 @@
     </table>
 </div>
 
-    <a class="btn btn-warning" href="{{ path('app_tinetti_index') }}">Torna alla lista</a>
+    <a class="btn btn-primary" href="{{ path('app_tinetti_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_tinetti_edit', {'id': tinetti.id}) }}">Modifica</a>
 
