--- a/templates/valutazione_figura_professionale/show.html.twig
+++ b/templates/valutazione_figura_professionale/show.html.twig
@@ -45,7 +45,7 @@
     </table>
 </div>
 
-    <a class="btn btn-warning" href="{{ path('app_valutazione_figura_professionale_index') }}">Torna alla lista</a>
+    <a class="btn btn-primary" href="{{ path('app_valutazione_figura_professionale_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_valutazione_figura_professionale_edit', {'id': valutazione_figura_professionale.id}) }}">Modifica</a>
 
