--- a/templates/valutazione_generale/_form.html.twig
+++ b/templates/valutazione_generale/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form, {attr: {'novalidate': 'novalidate'}}) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Salva') }}</button>
+    <button class="btn btn-primary">{{ button_label|default('Salva') }}</button>
 {{ form_end(form) }}
