--- a/templates/valutazione_generale/edit.html.twig
+++ b/templates/valutazione_generale/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('valutazione_generale/_form.html.twig', {'button_label': 'Salva'}) }}
 
-    <a class="btn btn-warning" href="{{ path('app_valutazione_generale_index') }}">Annulla</a>
+    <a class="btn btn-danger" href="{{ path('app_valutazione_generale_index') }}">Annulla</a>
 
     {{ include('valutazione_generale/_delete_form.html.twig') }}
 {% endblock %}
