--- a/templates/valutazione_generale/show.html.twig
+++ b/templates/valutazione_generale/show.html.twig
@@ -110,7 +110,7 @@
     </table>
 </div>
 
-    <a class="btn btn-warning" href="{{ path('app_valutazione_generale_index') }}">Torna alla lista</a>
+    <a class="btn btn-primary" href="{{ path('app_valutazione_generale_index') }}">Torna alla lista</a>
 
     <a class="btn btn-primary" href="{{ path('app_valutazione_generale_edit', {'id': valutazione_generale.id}) }}">Modifica</a>
 
