--- a/templates/scheda_pai/index.html.twig
+++ b/templates/scheda_pai/index.html.twig
@@ -25,9 +25,9 @@
             </tr>
             <tr>
                 <th><select class="form-select" name='filtro_id' onchange="this.form.submit()">
-                    <option value>Ordina</option>
-                    <option value="Crescente">Crescente</option>
-                    <option value="Decrescente">Decrescente</option>
+                    <option {% if ordinamento == '' %}selected{% endif %} value>Ordina</option>
+                    <option {% if ordinamento == 'Crescente' %}selected{% endif %} value="Crescente">Crescente</option>
+                    <option {% if ordinamento == 'Decrescente' %}selected{% endif %} value="Decrescente">Decrescente</option>
                     </select>
                 </th>
                 <th></th>
@@ -40,17 +40,20 @@
                 <th></th>
                 <th></th>
                 <th><select class="form-select" name='filtro_stato' onchange="this.form.submit()">
-                    <option value>Filtra</option>
-                    <option value="nuova">Nuova</option>
-                    <option value="attiva">Attiva</option>
-                    <option value="approvata">Approvata</option>
-                    <option value="in_attesa_di_chiusura"> In attesa di chiusura</option>
-                    <option value="chiusa">Chiusa</option>
-                    <option value="chiusa_con_rinnovo">Chiusa con rinnovo</option>
-                    <option value="">Nessuno</option>
+                    <option {% if stato == '' %}selected{% endif %} value="">Tutti</option>
+                    <option {% if stato == 'nuova' %}selected{% endif %} value="nuova">Nuova</option>
+                    <option {% if stato == 'attiva' %}selected{% endif %} value="attiva">Attiva</option>
+                    <option {% if stato == 'approvata' %}selected{% endif %} value="approvata">Approvata</option>
+                    <option {% if stato == 'in_attesa_di_chiusura' %}selected{% endif %} value="in_attesa_di_chiusura"> In attesa di chiusura</option>
+                    <option {% if stato == 'chiusa' %}selected{% endif %} value="chiusa">Chiusa</option>
+                    <option {% if stato == 'chiusa_con_rinnovo' %}selected{% endif %} value="chiusa_con_rinnovo">Chiusa con rinnovo</option>
                     </select>
                 </th>
-                <th></th>
+                <th><select class="form-select" name='filtro_numero_schede' onchange="this.form.submit()">
+                    <option {% if schede_per_pagina == 0 %}selected{% endif %} value=2>Visualizza per pagina</option>
+                    <option {% if schede_per_pagina == 5%}selected{% endif %} value=5>5</option>
+                    <option {% if schede_per_pagina == 10%}selected{% endif %} value=10>10</option>
+                </th>
             </tr>
         </thead>
         <tbody>
